# kube-evict-rs

./: Cargo.toml  Dockerfile  README.md  sample-deployment.yaml
.github/workflows/: main.yml
src/: main.rs
