[package]
name = "kube-evict-rs"
version = "0.2.0"
authors = ["Alexander Kunde <alexander.kunde@hamburgsud.com>"]
edition = "2018"

[dependencies]
env_logger = "0.9"
log = "0.4"
env-var = "1"
kube = "0.58.1"
kube-runtime = "0.58.1"
k8s-openapi = { version = "0.12.0", default-features = false, features = ["v1_19"] }
tokio = { version = "1", features = ["net"] }
either = "1.6.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
